generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  admin
  player
}

enum DialogueKind {
  narrator
  speech
  thought
  player_prompt
}

enum MediaAssetType {
  background_image
  background_music
}

model User {
  id              String           @id @default(cuid())
  email           String           @unique
  role            Role
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  responses       PlayerResponse[]
  readingProgress ReadingProgress?
}

model House {
  id         String      @id @default(cuid())
  name       String
  slug       String      @unique
  notes      String?
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  characters Character[]
}

model Character {
  id               String                     @id @default(cuid())
  publicId         String                     @unique
  name             String
  slug             String                     @unique
  houseId          String
  bio              String?
  notes            String?
  createdAt        DateTime                   @default(now())
  updatedAt        DateTime                   @updatedAt
  house            House                      @relation(fields: [houseId], references: [id], onDelete: Restrict)
  portraits        CharacterPortrait[]
  dialogueEntries  DialogueEntry[]
  sceneAppearances SceneCharacterAppearance[]

  @@index([houseId])
}

model CharacterPortrait {
  id               String                     @id @default(cuid())
  characterId      String
  storagePath      String
  label            String?
  sortOrder        Int                        @default(0)
  createdAt        DateTime                   @default(now())
  updatedAt        DateTime                   @updatedAt
  character        Character                  @relation(fields: [characterId], references: [id], onDelete: Cascade)
  sceneAppearances SceneCharacterAppearance[]

  @@index([characterId])
  @@index([sortOrder])
}

model MediaAsset {
  id                      String    @id @default(cuid())
  type                    MediaAssetType
  storagePath             String    @unique
  altText                 String?
  label                   String?
  createdAt               DateTime  @default(now())
  updatedAt               DateTime  @updatedAt
  chapterImageFor         Chapter[] @relation("ChapterImageAsset")
  sceneBackgroundImageFor Scene[]   @relation("SceneBackgroundImageAsset")
  sceneBackgroundMusicFor Scene[]   @relation("SceneBackgroundMusicAsset")

  @@index([type])
}

model Chapter {
  id           String      @id @default(cuid())
  publicId     String      @unique
  title        String
  slug         String      @unique
  orderIndex   Int         @unique
  imageAssetId String
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt
  imageAsset   MediaAsset  @relation("ChapterImageAsset", fields: [imageAssetId], references: [id], onDelete: Restrict)
  scenes       Scene[]

  @@index([imageAssetId])
}

model Scene {
  id                     String                   @id @default(cuid())
  publicId               String                   @unique
  chapterId              String
  title                  String?
  orderIndex             Int
  backgroundImageAssetId String
  backgroundMusicAssetId String?
  createdAt              DateTime                 @default(now())
  updatedAt              DateTime                 @updatedAt
  chapter                Chapter                  @relation(fields: [chapterId], references: [id], onDelete: Cascade)
  backgroundImageAsset   MediaAsset               @relation("SceneBackgroundImageAsset", fields: [backgroundImageAssetId], references: [id], onDelete: Restrict)
  backgroundMusicAsset   MediaAsset?              @relation("SceneBackgroundMusicAsset", fields: [backgroundMusicAssetId], references: [id], onDelete: SetNull)
  dialogueEntries        DialogueEntry[]
  characterAppearances   SceneCharacterAppearance[]

  @@unique([chapterId, orderIndex])
  @@index([chapterId])
  @@index([backgroundImageAssetId])
  @@index([backgroundMusicAssetId])
}

model SceneCharacterAppearance {
  id          String             @id @default(cuid())
  sceneId     String
  characterId String
  portraitId  String?
  createdAt   DateTime           @default(now())
  updatedAt   DateTime           @updatedAt
  scene       Scene              @relation(fields: [sceneId], references: [id], onDelete: Cascade)
  character   Character          @relation(fields: [characterId], references: [id], onDelete: Cascade)
  portrait    CharacterPortrait? @relation(fields: [portraitId], references: [id], onDelete: SetNull)

  @@unique([sceneId, characterId])
  @@index([sceneId])
  @@index([characterId])
  @@index([portraitId])
}

model DialogueEntry {
  id           String           @id @default(cuid())
  publicId     String           @unique
  sceneId      String
  kind         DialogueKind
  orderIndex   Int
  text         String
  promptLabel  String?
  characterId  String?
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt
  scene        Scene            @relation(fields: [sceneId], references: [id], onDelete: Cascade)
  character    Character?       @relation(fields: [characterId], references: [id], onDelete: SetNull)

  @@unique([sceneId, orderIndex])
  @@index([sceneId])
  @@index([characterId])
}

model AdminSceneDraft {
  sceneId              String   @id
  chapterId            String
  sourceSceneUpdatedAt DateTime
  payload              Json
  createdAt            DateTime @default(now())
  updatedAt            DateTime @updatedAt

  @@index([chapterId])
}

model PublishedStoryVersion {
  id                  String            @id @default(cuid())
  version             Int               @unique
  isActive            Boolean           @default(false)
  manifestStoragePath String
  storagePrefix       String            @unique
  createdAt           DateTime          @default(now())
  activatedAt         DateTime?
  readingProgress     ReadingProgress[]
  playerResponses     PlayerResponse[]
}

model ReadingProgress {
  id                  String                @id @default(cuid())
  userId              String                @unique
  publishedVersionId  String
  chapterPublicId     String
  scenePublicId       String
  dialogueEntryPublicId String
  lastReadAt          DateTime
  createdAt           DateTime              @default(now())
  updatedAt           DateTime              @updatedAt
  user                User                  @relation(fields: [userId], references: [id], onDelete: Cascade)
  publishedVersion    PublishedStoryVersion @relation(fields: [publishedVersionId], references: [id], onDelete: Restrict)

  @@index([publishedVersionId])
}

model PlayerResponse {
  id                  String                @id @default(cuid())
  publishedVersionId  String
  chapterPublicId     String
  chapterTitle        String
  chapterSlug         String
  chapterOrderIndex   Int
  scenePublicId       String
  sceneTitle          String?
  sceneOrderIndex     Int
  dialogueEntryPublicId String
  promptLabel         String?
  promptText          String
  userId              String
  responseText        String
  createdAt           DateTime              @default(now())
  publishedVersion    PublishedStoryVersion @relation(fields: [publishedVersionId], references: [id], onDelete: Restrict)
  user                User                  @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([publishedVersionId])
  @@index([chapterPublicId])
  @@index([scenePublicId])
  @@index([dialogueEntryPublicId])
  @@index([userId])
}
